@@ -1,5 +1,6 @@
 1.14.66.alpha.1 - 23rd October 2022
 - For 'Sell junk automatically' ('Automation'), white items entered in the exclusions editbox will be sold automatically.  Junk items entered in the editbox will not be sold automatically (as before).
+- If you use 'Show flight times' ('Interface') with ElvUI, the flight progress bar will now use ElvUI style.
 
 1.14.65 - 21st October 2022
 - For 'Show flight times', you can now have the remaining time spoken to you using text to speech.  The time will be announced once a minute and at 30 seconds, 20 seconds and 10 seconds.  This setting is disabled by default.
